<resources>
    <string name="app_name">Android Room DB Demo</string>
    <string name="add_employee_button">Add Employee Button</string>
    <string name="name_row">Name</string>
    <string name="person_image">Person image</string>
    <string name="hire_date_row">hire date</string>
    <string name="dept_row_name">department name</string>
    <string name="add_new_employee_label">Add New Employee</string>
    <string name="employee_name_placeholder">Enter Employee name</string>
    <string name="select_department_label">Select Department</string>
    <string name="employee_salary_placeholder">Enter Employee Salary</string>
    <string name="add_employee_button_text">Add employee</string>
    <string name="update_label">Update the employee</string>
    <string name="update_employee_btn_text">Update employee</string>
    <string name="select_contract_type">Select Contract Type</string>
    <string name="contract_type_row">contract type</string>

    <string-array name="departments">
        <item>Technical</item>
        <item>Support</item>
        <item>Research and Development</item>
        <item>Marketing</item>
        <item>Engineering</item>
        <item>Testing</item>
        <item>Development</item>
        <item>IT</item>
        <item>Human Resource</item>
    </string-array>
    <string-array name="contract">
        <item>Full Time</item>
        <item>Part Time</item>
    </string-array>
    <string name="title_activity_department">DepartmentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Department List</string>
    <string name="second_fragment_label">Add Department</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>