<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="3dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/person_image"
                    app:srcCompat="@drawable/ic_person" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="@string/name_row"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/contract_row"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contract_type_row"
                            android:paddingStart="8dp"
                            android:textColor="#B1B0B0"
                            android:layout_weight="1"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/hire_date_row"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hire_date_row"
                            android:textColor="#B1B0B0"
                            android:layout_weight="1"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/dept_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dept_row_name"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>